# WKjTX

./: .gitignore  CHANGELOG.md  INSTALL-WKjTX.md  README.md  SESSION-SUMMARY-2026-04-19.md  USER-GUIDE.md  build.bat  package-installer.bat  run.bat
.github/: FUNDING.yml
.github/workflows/: README.md  build-windows.yml  release.yml
docs/plans/: v1.2-qrz-upload.md
docs/superpowers/plans/: 2026-04-19-wkjtx-v0.1-baseline-and-rebrand.md  2026-04-19-wkjtx-v0.2-profiles.md  2026-04-19-wkjtx-v0.3-autocall.md  2026-04-19-wkjtx-v1.0-log-qrz-release.md  2026-04-21-wsjtx-26-ft8-decoder-cherry-pick.md
docs/superpowers/specs/: 2026-04-19-wkjtx-design.md
docs/website/: index.html  style.css
docs/website/img/: README.txt
jtdx-source/: CMakeCPackOptions.cmake.in  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.ui  MessageClient.cpp  MessageClient.hpp  NetworkMessage.hpp  Versions.cmake  WSPRBandHopping.cpp  about.cpp  about.ui  eqsl.cpp  eqsl.h  jtdx.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  revision_utils.cpp  wsjtx.pro  wsjtx.pro.user.18  wsjtx.pro.user.b01579c
jtdx-source/CMake/Modules/: FindFFTW3.cmake
jtdx-source/wkjtx/: AdifExportDialog.cpp  AdifExportDialog.hpp  AdifExporter.cpp  AdifExporter.hpp  AdifImporter.cpp  AdifImporter.hpp  AutoCall.cpp  AutoCall.hpp  AutoCallBadge.cpp  AutoCallBadge.hpp  AutoCallSettingsDialog.cpp  AutoCallSettingsDialog.hpp  CMakeLists.txt  DataUpdater.cpp  DataUpdater.hpp  LogRouter.cpp  LogRouter.hpp  PendingUploadsDialog.cpp  PendingUploadsDialog.hpp  ProfileButton.cpp  ProfileButton.hpp  ProfileManager.cpp  ProfileManager.hpp  QrzDownloader.cpp  QrzDownloader.hpp  QrzUploader.cpp  QrzUploader.hpp  RadioProfileDialog.cpp  RadioProfileDialog.hpp  ThemeManager.cpp  ThemeManager.hpp  TimeSync.cpp  TimeSync.hpp  TimeSyncBadge.cpp  TimeSyncBadge.hpp  UploadDispatcher.cpp  UploadDispatcher.hpp  UploadQueue.cpp  UploadQueue.hpp
jtdx-source/wkjtx/detectors/: CallsignDetector.cpp  CallsignDetector.hpp  GridDetector.cpp  GridDetector.hpp  Maidenhead.cpp  Maidenhead.hpp  NewDxccDetector.cpp  NewDxccDetector.hpp  PrefixDetector.cpp  PrefixDetector.hpp  ZoneDetector.cpp  ZoneDetector.hpp  ZoneTables.hpp
jtdx-source/wkjtx/tests/: CMakeLists.txt  test_autocall_pipeline.cpp  test_autocall_safeguards.cpp  test_grid_detector.cpp  test_log_router.cpp  test_maidenhead.cpp  test_prefix_detector.cpp  test_zone_detector.cpp
jtdx-source/wkjtx/themes/: amber-classic.qss  amber-high-contrast.qss  amber-night.qss  themes.qrc
scripts/: README.md  build-wkjtx.sh  generate-icon.py
